--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,9 +45,10 @@
 name: 'Terraform'
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
+  push
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
 
 permissions:
   contents: read
@@ -56,7 +57,6 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
-    environment: production
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -91,3 +91,18 @@ jobs:
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
+  ansible:
+    name: 'Ansible'
+    runs-on: ubuntu-latest
+
+    - name: Run playbook
+      uses: dawidd6/action-ansible-playbook@v2
+      with:
+        # Required, playbook filepath
+        playbook: ansible-playbook.yml
+        # Optional, SSH private key
+        key: ${{secrets.SSH_PRIVATE_KEY}}
+      # Optional, additional flags to pass to ansible-playbook
+        options: |
+          -u `terraform output admin_username`
+          -i `terraform output host`
