--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,6 +95,7 @@ jobs:
     name: 'Ansible'
     runs-on: ubuntu-latest
 
+    steps:
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
       with:
