--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -103,6 +103,8 @@ jobs:
       with:
         # Required, playbook filepath
         playbook: ansible-playbook.yml
+        # Optional, directory where playbooks live
+        directory: ./
         # Optional, SSH private key
         key: ${{ secrets.SSH_PRIVATE_KEY }}
       # Optional, additional flags to pass to ansible-playbook
