--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -101,13 +101,13 @@ jobs:
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
       with:
-        # Required, playbook filepath
-        playbook: ansible-playbook.yml
         # Optional, directory where playbooks live
-        directory: ./
+        directory: ansible      
+        # Required, playbook filepath
+        playbook: playbook.yml
         # Optional, SSH private key
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-      # Optional, additional flags to pass to ansible-playbook
+        # Optional, additional flags to pass to ansible-playbook
         options: |
           -u jkingdon
           -i jkingdon-webserver-vm.eastus.cloudapp.azure.com
