check if terraform is changing dir

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,7 +42,7 @@
 #       with:
 #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-name: 'Terraform'
+name: 'Terraform and Ansible'
 
 on:
   push
@@ -54,44 +54,44 @@ permissions:
   contents: read
 
 jobs:
-  terraform:
-    name: 'Terraform'
-    runs-on: ubuntu-latest
+  # terraform:
+  #   name: 'Terraform'
+  #   runs-on: ubuntu-latest
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
+  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+  #   defaults:
+  #     run:
+  #       shell: bash
 
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v3
+  #   steps:
+  #     # Checkout the repository to the GitHub Actions runner
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1        
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          terraform_wrapper: false        
+  #     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v1        
+  #       with:
+  #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  #         terraform_wrapper: false        
 
-      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-      - name: Terraform Init
-        run: terraform init
+  #     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+  #     - name: Terraform Init
+  #       run: terraform init
 
-      # Checks that all Terraform configuration files adhere to a canonical format
-      - name: Terraform Format
-        run: terraform fmt -check
+  #     # Checks that all Terraform configuration files adhere to a canonical format
+  #     - name: Terraform Format
+  #       run: terraform fmt -check
 
-      # Generates an execution plan for Terraform
-      - name: Terraform Plan
-        run: terraform plan -input=false
+  #     # Generates an execution plan for Terraform
+  #     - name: Terraform Plan
+  #       run: terraform plan -input=false
 
-        # On push to "main", build or change infrastructure according to Terraform configuration files
-        # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+  #       # On push to "main", build or change infrastructure according to Terraform configuration files
+  #       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+  #     - name: Terraform Apply
+  #       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+  #       run: terraform apply -auto-approve -input=false
   ansible:
     name: 'Ansible'
     runs-on: ubuntu-latest
@@ -102,7 +102,7 @@ jobs:
         uses: dawidd6/action-ansible-playbook@v2
         with:
           # Optional, directory where playbooks live
-          directory: ../ansible      
+          directory: ./ansible      
           # Required, playbook filepath
           playbook: playbook.yml
           # Optional, SSH private key
