--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,7 +95,7 @@ jobs:
   ansible:
     name: 'Ansible'
     runs-on: ubuntu-latest
-    needs: terraform
+    # needs: terraform
 
     steps:
       - name: Run playbook
