--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -10,8 +10,10 @@ jobs:
   ansible:
     name: 'Ansible'
     runs-on: ubuntu-latest
-    
+
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
