add host in inventory

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -22,7 +22,9 @@ jobs:
           playbook: playbook.yml
           # Optional, SSH private key
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          inventory: |
+            [all]
+            jkingdon-webserver-vm.eastus.cloudapp.azure.com         
           # Optional, additional flags to pass to ansible-playbook
           options: |
             -u jkingdon
-            -i jkingdon-webserver-vm.eastus.cloudapp.azure.com,
