--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -28,4 +28,4 @@ jobs:
           # Optional, additional flags to pass to ansible-playbook
           options: |
             -u jkingdon
-            -vvvv
+            -vvvvvv
