try using bash step for ansible

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -13,20 +13,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
-      - name: Run playbook
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          # Optional, directory where playbooks live
-          directory: ansible
-          # Required, playbook filepath
-          playbook: playbook.yml
-          # Optional, SSH private key
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          inventory: |
-            [all]
-            jkingdon-webserver-vm.eastus.cloudapp.azure.com                     
-          # Optional, additional flags to pass to ansible-playbook
-          options: |
-            -u jkingdon
-            -vvvvvv
+
+      - shell: bash
+        run: |
+          ${{ secrets.AZURE_CREDENTIALS }} > /tmp/id_rsa
+          ansible-playbook -u jkingdon -i jkingdon-webserver-vm.eastus.cloudapp.azure.com, --private-key /tmp/id_rsa ansible/playbook.yml
+          rm /tmp/id_rsa
+
+      # - name: Run playbook
+      #   uses: dawidd6/action-ansible-playbook@v2
+      #   with:
+      #     # Optional, directory where playbooks live
+      #     directory: ansible
+      #     # Required, playbook filepath
+      #     playbook: playbook.yml
+      #     # Optional, SSH private key
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     inventory: |
+      #       [all]
+      #       jkingdon-webserver-vm.eastus.cloudapp.azure.com                     
+      #     # Optional, additional flags to pass to ansible-playbook
+      #     options: |
+      #       -u jkingdon
+      #       -vvvvvv
