--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -17,6 +17,7 @@ jobs:
       - shell: bash
         run: |
           ${{ secrets.AZURE_CREDENTIALS }} > /tmp/id_rsa
+          sudo chmod 777 /tmp/id_rsa          
           ansible-playbook -u jkingdon -i jkingdon-webserver-vm.eastus.cloudapp.azure.com, --private-key /tmp/id_rsa ansible/playbook.yml
           rm /tmp/id_rsa
 
