--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           ${{ secrets.AZURE_CREDENTIALS }} > /tmp/id_rsa
           sudo chmod 777 /tmp/id_rsa          
-          ansible-playbook -u jkingdon -i jkingdon-webserver-vm.eastus.cloudapp.azure.com, --private-key /tmp/id_rsa ansible/playbook.yml
+          ansible-playbook -u jkingdon -i jkingdon-webserver-vm.eastus.cloudapp.azure.com, --private-key /tmp/id_rsa playbook.yml
           rm /tmp/id_rsa
 
       # - name: Run playbook
