--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -6,8 +6,8 @@ on:
 permissions:
   contents: read
 
-env:
-  PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}  
+# env:
+#   PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}  
 
 jobs:
   ansible:
@@ -19,8 +19,9 @@ jobs:
 
       - shell: bash
         run: |
-          echo $PRIVATE_KEY > /tmp/id_rsa
-          sudo chmod 600 /tmp/id_rsa          
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          ssh-keyscan -H jkingdon-webserver-vm.eastus.cloudapp.azure.com > ~/.ssh/known_hosts        
           ansible-playbook -u jkingdon -i jkingdon-webserver-vm.eastus.cloudapp.azure.com, --private-key /tmp/id_rsa playbook.yml
           rm /tmp/id_rsa
 
