--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -22,8 +22,8 @@ jobs:
           install -m 600 -D /dev/null ~/.ssh/id_rsa
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           ssh-keyscan -H jkingdon-webserver-vm.eastus.cloudapp.azure.com > ~/.ssh/known_hosts        
-          ansible-playbook -u jkingdon -i jkingdon-webserver-vm.eastus.cloudapp.azure.com, --private-key /tmp/id_rsa playbook.yml
-          rm /tmp/id_rsa
+          ansible-playbook -u jkingdon -i jkingdon-webserver-vm.eastus.cloudapp.azure.com, --private-key ~/.ssh/id_rsa playbook.yml
+          rm ~/.ssh/id_rsa
 
       # - name: Run playbook
       #   uses: dawidd6/action-ansible-playbook@v2
