--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -30,7 +30,7 @@ jobs:
           # Required, playbook filepath
           playbook: playbook.yml
           # Optional, SSH private key
-          key: "${{ secrets.SSH_PRIVATE_KEY }}"
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           inventory: |
             [all]
             jkingdon-webserver-vm.eastus.cloudapp.azure.com                     
