--- a/.github/workflows/terraform-ansible.yml
+++ b/.github/workflows/terraform-ansible.yml
@@ -98,6 +98,10 @@ jobs:
     needs: terraform
 
     steps:
+        # Checkout the repository to the GitHub Actions runner
+        - name: Checkout
+          uses: actions/checkout@v3
+
         - name: Run playbook
           uses: dawidd6/action-ansible-playbook@v2
           with:
