--- a/.github/workflows/terraform-ansible.yml
+++ b/.github/workflows/terraform-ansible.yml
@@ -92,9 +92,11 @@ jobs:
 
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-      - name: Terraform Apply
+      - id: tfapply
+        name: Terraform Apply
         if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
+       
   ansible:
     name: 'Ansible'
     runs-on: ubuntu-latest
@@ -117,4 +119,4 @@ jobs:
               jkingdon-webserver-vm.eastus.cloudapp.azure.com                     
             # Optional, additional flags to pass to ansible-playbook
             options: |
-              -u ${{needs.terraform.outputs.admin_username}}
+              -u ${{steps.tfapply.outputs.admin_username}}
