--- a/.github/workflows/terraform-ansible.yml
+++ b/.github/workflows/terraform-ansible.yml
@@ -74,6 +74,7 @@ jobs:
             playbook: playbook.yml
             # Optional, SSH private key
             key: ${{ secrets.SSH_PRIVATE_KEY }}
+            # Optional, literal inventory file contents
             inventory: |
               [all]
               ${{needs.terraform.outputs.host}}                     
