--- a/.github/workflows/terraform-ansible.yml
+++ b/.github/workflows/terraform-ansible.yml
@@ -51,7 +51,7 @@ jobs:
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - id: tfapply
         name: Terraform Apply
-        # if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
         run: |
           terraform apply -auto-approve -input=false
           echo "admin_username=$(terraform output admin_username)" >> $GITHUB_OUTPUT
@@ -61,6 +61,7 @@ jobs:
     name: 'Ansible'
     runs-on: ubuntu-latest
     needs: terraform
+    if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'   
 
     steps:
         # Checkout the repository to the GitHub Actions runner
