--- a/.github/workflows/terraform-ansible.yml
+++ b/.github/workflows/terraform-ansible.yml
@@ -1,10 +1,9 @@
 name: 'Deploy and configure server with Terraform and Ansible'
 
 on:
-  push
-  # push:
-  #   branches: [ "main" ]
-  # pull_request:
+  push:
+    branches: [ "main" ]
+  pull_request:
 
 permissions:
   contents: read
